--- a/leaderboard.html
+++ b/leaderboard.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Sheepocalypse: Sheep Arena Leaderboard</title>
 		<link rel = "stylesheet" type = "text/css" href = "css/style.css">
-		<link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P">
+		<link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Press+Start+2P">
 		<meta name = "robots" content = "noindex">
 		<style>
 			.dreamloLBTable { border-collapse:collapse;text-align:center;width: 100%; }
@@ -16,7 +16,7 @@
 	<body>
 		<h2>Top 100 Scores</h2>
 		<br>
-		<script src="http://dreamlo.com/lb/5c000996b6397e00e0b6dc63/js"></script>
+		<script src = "https://dreamlo.com/lb/5c000996b6397e00e0b6dc63/js"></script>
 	</body>
 
 </html>
