--- a/sheeparena.html
+++ b/sheeparena.html
@@ -69,8 +69,8 @@
 				<br><br>
 				<p>I've been looking through my computer to try and find some screenshots showing the evolution of Sheepocalypse, the cut content and bits of the sequel. I hope they're
 				interesting and show you what I hoped Sheepocalypse could be. All is not lost though, as I've packaged up the Xbox One build of the unfinished sequel for you to play.
-				It can be installed on Developer Mode Windows 10 PCs as well as Developer Mode consoles, and can be downloaded from
-				<a href = "downloads/Sheepocalypse-Xbox-Unreleased.7z">here</a>.</p>
+				It can be installed on Developer Mode Windows 10 PCs as well as Developer Mode consoles, and can be downloaded from my Google Drive
+				<a href = "https://drive.google.com/file/d/1Xs20bpTNKM2hLOpDb2yEhAIEr53eINrH/view?usp=sharing">here</a>.</p>
 			</article>
 		</main>
 		<footer>
