--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<main>
 			<h1>Hi</h1>
 			<article>
-				<p>Welcome to <a href = "https://alexpaterson.github.io">alexpaterson.github.io</a>, the home site for Alex Paterson's games!</p>
+				<p>Welcome to <a href = "https://alexpatersongames.github.io">alexpatersongames.github.io</a>, the home site for Alex Paterson's games!</p>
 			</article>
 			<br>
 			<div class = "Carousel">
