--- a/leaderboard.html
+++ b/leaderboard.html
@@ -16,7 +16,8 @@
 	<body>
 		<h2>Top 100 Scores</h2>
 		<br>
-		<script src = "https://dreamlo.com/lb/5c000996b6397e00e0b6dc63/js"></script>
+		<script src = "https://newlongtonscouts.com/servecontent/SheepocalypseLeaderboard.js"></script>
+		<!-- Kindly hosted by New Longton Scouts. -->
 	</body>
 
 </html>
